# Carrot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/maps/: test.bsp  test.content.json  test.map
assets/textures/skybox/jacob_robbins/: LICENSE.md
src/: interaction.rs  main.rs  materials.rs  player.rs  portal.rs  projection.rs  projections.rs  special_materials.rs  special_textures.rs
src/brushes/: door.rs  mod.rs  portal.rs
src/class/: mod.rs
src/class/brush/: door.rs  mod.rs  portal.rs
src/class/point/: interaction.rs  mod.rs
src/shaders/: portal.wgsl  sky.wgsl
