[package]
name = "Carrot"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[dependencies]
bevy = { version = "0.16", features = ["exr"] }
nestify = "0.3.3"
bevy-panic-handler = "5.0"
bevy_trenchbroom = { git = "https://github.com/Noxmore/bevy_trenchbroom.git", default-features = true, features = [
    "rapier",
    "bsp",
] }
bevy-inspector-egui = "0.33"
bevy_framepace = "0.19"
nil = "0.15.0"
bevy_rapier3d = { version = "0.31", features = [
    "simd-nightly",
    "parallel",
    "debug-render-3d",
] }
bevy_mesh = "0.16"
