[package]
name = "Carrot"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[features]
default = ["debug", "bevy/dynamic_linking"]
debug = [
    "bevy/bevy_remote",
    "bevy/track_location",
    "bevy_rapier3d/debug-render-3d",
]

[dependencies]
bevy = { version = "0.16.1", features = ["exr", "wayland"] }
nestify = "0.3.3"
bevy-panic-handler = "5.0.0"
bevy_trenchbroom = { git = "https://github.com/Noxmore/bevy_trenchbroom.git", default-features = true, features = [
    "rapier",
    "bsp",
] }
bevy_framepace = "0.19.1"
nil = "0.15.0"
bevy_rapier3d = { version = "0.31.0", features = ["simd-nightly", "parallel"] }
itertools = "0.14.0"
try-partialord = "0.1.3"
leafwing-input-manager = "0.17.1"
